Fixed navbar spacing

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -40,7 +40,7 @@
 
 .nav-tabs > li > a{
     background-color: lightgray !important;
-    margin-right: 1px; 
+    margin-left: 2px;
 }
 
 .nav {
